2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Temporarily disable timeout support in gptel-tools--url-retrieve

	* site-lisp/gptel-tools.el (gptel-tools--url-retrieve): Comment out
	timer.  Add fixme.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Use `completion-table-with-metadata'

	* site-lisp/obsoletes/gtkdoc.el (gtkdoc-lookup):
	* site-lisp/good-doc.el (good-doc--read-entry):
	* site-lisp/dotemacs-core.el (dotemacs--major-mode-completion-table):

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind C-c DEL to delete-char in paredit-mode.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (pp-default-function): Declare.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-repo-up-to-date-p): Check push remote too.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Update macros in dotemacs-core

	* site-lisp/dotemacs-core.el (delq!, remq!): Fix.
	(delete!, remove!): New functions.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Fix modify-other-keys--init

	* site-lisp/modify-other-keys.el (modify-other-keys--init):
	Use setf with delete to make sure the value is actually deleted.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Do not use built-in packages any more.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (copy-message): Error if message ring is empty.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	* init.el: Disable meow-indicator since we use doom-modeline.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Fix error `C-<space>' undefined

	* site-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): Use SPC instead of
	<space>.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Improve message-insert-ring

	* init.el (message-ring-insert): Use `ring-remove+insert+extend'
	to make sure the message is not duplicated.
	(message-ring-inhibit-regexps): Update default ignore regexps.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Workaround an Emacs bug

	* init.el: Do not reenable `lin-global-mode' when reloading
	init.el.

2025-09-25  Zhengyi Fu  <i@fuzy.me>
